Alterações visuais ao controller Clientes

--- a/teste/teste/Views/Home/Index.cshtml
+++ b/teste/teste/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">UniqueDrinks</h1>
+    <h4 class="active">A vida é curta demais para beber whiskey de má qualidade!!!</h4>
+    <br />
+    <img class="img-fluid" src="~/Imagens/menuBar.jpg" />
 </div>
