--- a/teste/teste/Views/Clientes/Create.cshtml
+++ b/teste/teste/Views/Clientes/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar um novo Cliente</h1>
 
 <h4>Clientes</h4>
 <hr />
@@ -33,14 +33,20 @@
                 <span asp-validation-for="Datanasc" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="Fotografia" class="control-label"></label>
+              
+                <input type="file" name="fotoCliente" accept=".jpeg,.jpg,.png" style="color:blue;" />
+                <span asp-validation-for="Fotografia" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar à lista</a>
 </div>
 
 @section Scripts {
