--- a/teste/teste/Views/Clientes/Details.cshtml
+++ b/teste/teste/Views/Clientes/Details.cshtml
@@ -4,39 +4,75 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
     <h4>Clientes</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nome)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Contacto)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Contacto)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Datanasc)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Datanasc)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Fotografia)
+        </dt>
+        <dd class="col-sm-10">
+            <img src="~/Imagens/@Model.Fotografia" height="200" alt="Imagem do Cliente @Model.Nome" title="@Model.Nome" />
         </dd>
     </dl>
 </div>
+
+<h4>Lista de Reservas associadas ao/à @Model.Nome</h4>
+
+@if (Model.ListaDeReservas.Count == 0)
+{
+    <p>Não há reservas associadas ao Cliente.</p>
+}
+else
+{
+    <table class="table">
+        <tr>
+            <th>Bebida reservada</th>
+            <th>Quantidade de Bebidas</th>
+            <th>Data de Reserva</th>
+            <th>Estado da Reserva</th>
+            <th>Data de Entrega</th>
+        </tr>
+        @foreach (var reserva in Model.ListaDeReservas)
+        {
+    <tr>
+        <td>@reserva.Bebida.Id</td>
+        <td>@reserva.Quantidade</td>
+        <td>@reserva.DataReserva</td>
+        <td>@reserva.Estado</td>
+        <td>@reserva.DataEntrega</td>
+        <td></td>
+    </tr>
+        }
+    </table>
+}
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
+    <a asp-action="Index">Voltar à lista</a>
 </div>
