Criação de registo de novo utilizador

--- a/teste/teste/Views/Reservas/Create.cshtml
+++ b/teste/teste/Views/Reservas/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model teste.Models.Reservas
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
 <h4>Reservas</h4>
 <hr />
@@ -46,14 +46,14 @@
                 <select asp-for="ClienteFK" class ="form-control" asp-items="ViewBag.ClienteFK"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar à Lista</a>
 </div>
 
 @section Scripts {
