--- a/teste/teste/Views/Reservas/Edit.cshtml
+++ b/teste/teste/Views/Reservas/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model teste.Models.Reservas
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Reservas</h4>
 <hr />
@@ -40,14 +40,14 @@
             <input type="hidden" asp-for="BebidaFK" />
             <input type="hidden" asp-for="ClienteFK" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar à lista</a>
 </div>
 
 @section Scripts {
