--- a/teste/teste/Views/Clientes/Index.cshtml
+++ b/teste/teste/Views/Clientes/Index.cshtml
@@ -51,9 +51,14 @@
                 </a>
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <text>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                    </text>
+                }
             </td>
         </tr>
 }
