--- a/teste/teste/Views/Reservas/Delete.cshtml
+++ b/teste/teste/Views/Reservas/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model teste.Models.Reservas
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que pretende eliminar esta Reserva?</h3>
 <div>
     <h4>Reservas</h4>
     <hr />
@@ -58,7 +58,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="BebidaFK" />
         <input type="hidden" asp-for="ClienteFK" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar à lista</a>
     </form>
 </div>
