--- a/teste/teste/Views/Shared/_LoginPartial.cshtml
+++ b/teste/teste/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,19 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<teste.Data.ApplicationUser> SignInManager
+@inject UserManager<teste.Data.ApplicationUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+        @{
+            string nomeCliente = (await UserManager.GetUserAsync(User)).Nome;
+            string fotocliente = (await UserManager.GetUserAsync(User)).Fotografia;
+        }
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            <img src="~/Imagens/Clientes/@fotocliente" height="30" alt="fotografia do @nomeCliente" title="@nomeCliente" />
+            @nomeCliente
+        </a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
@@ -17,7 +24,7 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Registar</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
