--- a/teste/teste/Views/Bebidas/Create.cshtml
+++ b/teste/teste/Views/Bebidas/Create.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Imagem" class="control-label"></label>
-                <input asp-for="Imagem" class="form-control" />
+                <input type="file" name="Imagem da Bebida" accept=".jpeg,.jpg,.png" style="color:blue;" />
                 <span asp-validation-for="Imagem" class="text-danger"></span>
             </div>
             <div class="form-group">
