--- a/teste/teste/Views/Bebidas/Details.cshtml
+++ b/teste/teste/Views/Bebidas/Details.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.Imagem)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Imagem)
+            <img src="~/Imagens/@Model.Imagem" height="200" alt="imagem da Bebida @Model.Nome" title="@Model.Nome" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Stock)
