--- a/teste/teste/Areas/Identity/Pages/Account/Register.cshtml
+++ b/teste/teste/Areas/Identity/Pages/Account/Register.cshtml
@@ -10,8 +10,11 @@
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
             <h4>Criar uma nova conta</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Input.Nome"></label>
+                <input asp-for="Input.Nome" class="form-control" />
+                <span asp-validation-for="Input.Nome" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
@@ -27,20 +30,16 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-
-            <hr />
-
-           
             <div class="form-group">
-                <label asp-for="Input.Nome"></label>
-                <input asp-for="Input.Nome" class="form-control" />
-                <span asp-validation-for="Input.Nome" class="text-danger"></span>
+                <label asp-for="Input.Datanasc"></label>
+                <input asp-for="Input.Datanasc" class="form-control" />
+                <span asp-validation-for="Input.Datanasc" class="text-danger"></span>
             </div>
-
-       
+ 
             <div class="form-group">
+                <label asp-for="Input.Fotografia"></label>
                 <label class="control-label">Fotografia</label>
-                <input type="file" name="fotoCliente" accept=".jpeg,.jpg,.png" style="color:blue;" /> 
+                <input type="file" name="fotoCliente" accept=".jpeg,.jpg,.png" style="color:blue;" />
             </div>
             <button type="submit" class="btn btn-primary">Registar</button>
         </form>
