--- a/teste/teste/Views/Clientes/Details.cshtml
+++ b/teste/teste/Views/Clientes/Details.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayNameFor(model => model.Fotografia)
         </dt>
         <dd class="col-sm-10">
-            <img src="~/Imagens/@Model.Fotografia" height="200" alt="Imagem do Cliente @Model.Nome" title="@Model.Nome" />
+            <img src="@Url.Content("~/Imagens/Clientes/")@Model.Fotografia" height="200" alt="Imagem do Cliente @Model.Nome" title="@Model.Nome" />
         </dd>
     </dl>
 </div>
